--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
+<html lang="en">
+
 
 <head>
+  <meta charset="utf-8">
   <title>Koushik Jandhyala</title>
 </head>
 
 <body>
-  <h1>Koushik Jandhyala</h1>
+  <div id="english">
+    <H1>Koushik Jandhyala</H1>
+    <hr>
+    <H2>About Me </H2>
+    <p>Hey! It's Koushik, a developer from Califorina, USA. I love messing around with coding langugages, tinkering with computers, and doing what ever interests me at that moment.
+      Here is a cataloge of all I have done
+    </p>
+    <button onclick="LinkedIn()">LinkedIn</button>
+  </div>
+
+  <script>
+    function LinkedIn(){
+      window.open("www.linkedin.com/in/koushik-jandhyala", "_blank");
+    }
+  </script>
 </body>
