--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Koushik J. Crafted with passion, precision. Add a whole lot of coding with a dash of raging because every now and then the code deicides not work</p>
+    <p>&copy; 2025 Koushik J. Crafted with passion, precision. Add a whole lot of coding with a dash of raging because every now and then the code deicides not to work</p>
   </footer>
 </body>
 </html>
